@@ -5,6 +5,10 @@ HISTORY
 1.1rc14 (Unreleased)
 --------------------
 
+- Fixed `#undefined` in style selection for lists. This closes
+  http://dev.plone.org/plone/ticket/10684.
+  [hannosch]
+
 - Hide the non-functioning advanced table options. This closes
   http://dev.plone.org/plone/ticket/10535.
   [hannosch]
